# MultPlat-provide

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  PLAN.md
examples/: article.md
multipub/: __init__.py
multipub/core/: document.py  parser.py  pipeline.py  platform.py  registry.py  style.py
multipub/profiles/: bilibili.yaml  wechat.yaml  xiaohongshu.yaml  zhihu.yaml
multipub/publishers/: base.py
multipub/web/: app.py  imagehost.py
multipub/web/static/: app.js  index.html
tests/: test_bilibili.py  test_core_contract.py  test_imagehost.py  test_style.py  test_web.py  test_wechat.py  test_xiaohongshu.py  test_zhihu.py
validation/: PROTOCOL.md  wechat-paste-test.html
