[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multipub"
version = "0.0.1"
description = "多平台内容发布工具：一次写作，多平台格式/风格适配 + 模拟发布"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mistune>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
web = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9", "httpx>=0.27"]
llm = ["anthropic>=0.40"]

[tool.setuptools.packages.find]
include = ["multipub*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
